--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-BASE_API_URL='https://api.escuelajs.co/api/v1'
+# BASE_API_URL='https://api.escuelajs.co/api/v1'
+BASE_API_URL='https://fakestoreapi.com'
